--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "serve-json": "json-server --watch db.json --port 4000"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "json-server": "^0.17.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-query": "^3.39.2",
     "react-router-dom": "^6.4.1"
   },
   "devDependencies": {
